# sol-simple-swap

./: .gitignore  Anchor.toml  README.md  package.json
app/solana-dapp-next-main/anchor/: README.md
app/solana-dapp-next-main/src/views/token/service/: TokenService.ts
programs/constant-lp/: Cargo.toml
programs/constant-lp/src/: lib.rs
programs/move-token/: Cargo.toml
programs/move-token/src/: errors.rs  instructions.rs  lib.rs  lib.test.ts
programs/move-token/src/instructions/: create_token.rs  create_token.test.ts  mint_to_another_wallet.rs  mint_to_another_wallet.test.ts  mint_token.rs  transfer_to_another_wallet.rs  transfer_to_another_wallet.test.ts
programs/simple-liquidity-pool/: Cargo.toml
programs/simple-liquidity-pool/src/: errors.rs  instructions.rs  lib.rs  lib.test.ts  state.rs
programs/simple-liquidity-pool/src/instructions/: add_lp.rs  add_lp.test.ts  init.rs  init.test.ts  swap.rs  swap.test.ts  utils.test.ts
programs/simple-liquidity-pool/src/state/: fixed_rate_lp.rs  lp.rs
programs/sol-swap-0/: Cargo.toml
programs/sol-swap-0/src/: lib.rs  lib.test.ts
tests/: move_token.ts  sol-swap-0.ts
tests/helpers/: create-token.sh  test-env.ts  testProgram.ts  token.ts
